--- a/clickygame/src/index.css
+++ b/clickygame/src/index.css
@@ -1,5 +1,10 @@
-body {
+* {
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif
+}
+
+html, body, #root {
   padding: 0;
-  margin: 0 0;
-  font-family: sans-serif;
+  margin: 0;
+  height: 100%;
 }
